--- a/package.json
+++ b/package.json
@@ -13,8 +13,9 @@
     "@supabase/supabase-js": "^2.46.2",
     "date-fns": "^4.1.0",
     "next": "15.0.3",
-    "react": "19.0.0-rc-66855b96-20241106",
-    "react-dom": "19.0.0-rc-66855b96-20241106",
+    "next-auth": "^4.24.11",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
     "the-wild-oasis-website": "file:"
   },
   "devDependencies": {
