--- a/package.json
+++ b/package.json
@@ -13,8 +13,9 @@
     "@supabase/supabase-js": "^2.46.2",
     "date-fns": "^4.1.0",
     "next": "15.0.3",
-    "next-auth": "^4.24.11",
+    "next-auth": "^5.0.0-beta.28",
     "react": "^18.3.1",
+    "react-day-picker": "^9.6.7",
     "react-dom": "^18.3.1",
     "the-wild-oasis-website": "file:"
   },
